src/z80asm/z80asm2/t/50-layout/expected/layout_org_03.txt
% z88dk-z80asm -v -dump-after-layout t/50-layout//input/layout_org_03.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/50-layout/input/layout_org_03.asm...
t/50-layout/input/layout_org_03.asm:3:5: error: ORG address cannot be less than previously allocated
    org 0           ; go back, error
        ^
Assembly completed with 1 error
